test/types/coerce/diten/test_uint64_op_int_error.good
test_uint64_op_int_error.chpl:4: error: illegal use of '**' on operands of type uint(64) and signed integer
