test/types/coerce/diten/test_uint64_op_int_error.chpl
var u: uint(64) = 1;
var i: int = 2;

writeln(u**i);
